[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assetintel-backend"
dynamic = ["version"]
description = "Backend API for AssetIntel - Asset Management System"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["fastapi", "asset-management", "api", "backend"]
authors = [
  {name = "AssetIntel Team", email = "dev@assetintel.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "sqlalchemy>=2.0.23",
  "alembic>=1.13.1",
  "httpx>=0.25.2",
  "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=4.1.0",
  "black>=23.11.0",
  "isort>=5.12.0",
  "flake8>=6.1.0",
  "mypy>=1.7.1",
]
prod = [
  "psycopg2-binary>=2.9.9",
  "gunicorn>=21.2.0",
]

[project.urls]
Documentation = "https://github.com/assetintel/assetintel-backend#readme"
Issues = "https://github.com/assetintel/assetintel-backend/issues"
Source = "https://github.com/assetintel/assetintel-backend"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov-html = [
  "- coverage combine", 
  "coverage html",
]

[tool.black]
target-version = ["py39"]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.coverage.run]
source_pkgs = ["app", "tests"]
branch = true
parallel = true
omit = [
  "app/__init__.py",
]

[tool.coverage.paths]
assetintel_backend = ["app", "*/assetintel-backend/app"]
tests = ["tests", "*/assetintel-backend/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]